--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ashish159565/miniconda3/envs/p3.11/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,73 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "tokenizer = BertTokenizerFast.from_pretrained(\"bert-base-cased\")\n",
     "\n",
-    "# Unique BIO tags\n",
+    "# # Unique BIO tags\n",
     "tag_values = ['O', 'B-SUB', 'I-SUB', 'B-PRED', 'I-PRED', 'B-OBJ', 'I-OBJ']\n",
     "tag2id = {tag: i for i, tag in enumerate(tag_values)}\n",
     "id2tag = {i: tag for tag, i in tag2id.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 258,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SPOBioDataset(Dataset):\n",
-    "    def __init__(self, data, tokenizer, tag2id, max_len=512):\n",
-    "        self.data = data\n",
-    "        self.tokenizer = tokenizer\n",
-    "        self.tag2id = tag2id\n",
-    "        self.max_len = max_len\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.data)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        tokens, tags = self.data[idx]\n",
-    "\n",
-    "        tokenized_input = self.tokenizer(tokens,\n",
-    "                                        is_split_into_words=True,\n",
-    "                                        padding='max_length',\n",
-    "                                        truncation=True,\n",
-    "                                        max_length=self.max_len,\n",
-    "                                        return_tensors=\"pt\")\n",
-    "\n",
-    "        word_ids = tokenized_input.word_ids(batch_index=0)\n",
-    "        label_ids = []\n",
-    "\n",
-    "        for word_idx in word_ids:\n",
-    "            if word_idx is None:\n",
-    "                label_ids.append(-100)\n",
-    "            else:\n",
-    "                label_ids.append(tag2id.get(tags[word_idx], tag2id['O']))\n",
-    "\n",
-    "        return {\n",
-    "            'input_ids': tokenized_input['input_ids'].squeeze(),\n",
-    "            'attention_mask': tokenized_input['attention_mask'].squeeze(),\n",
-    "            'labels': torch.tensor(label_ids)\n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data, val_data = train_test_split(dataset, test_size=0.1, random_state=42)\n",
-    "\n",
-    "train_dataset = SPOBioDataset(train_data, tokenizer, tag2id)\n",
-    "val_dataset = SPOBioDataset(val_data, tokenizer, tag2id)\n",
-    "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=8)"
    ]
   },
   {
@@ -212,18 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "class BERTTagger(nn.Module):\n",
-    "    def __init__(self, tag2id):\n",
-    "        super(BERTTagger, self).__init__()\n",
+    "class BERT_SPO_Tagger(nn.Module):\n",
+    "    def __init__(self, tag2id, tokenizer, lr=5e-5, epochs = 10, load_predefined_weights = None):\n",
+    "        super(BERT_SPO_Tagger, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(\"bert-base-cased\")\n",
     "        self.dropout = nn.Dropout(0.1)\n",
     "        self.classifier = nn.Linear(self.bert.config.hidden_size, len(tag2id))\n",
+    "        self.__tag2id = tag2id\n",
+    "        self.__train_loader = None\n",
+    "        self.__val_loader = None\n",
+    "        self.__lr = lr\n",
+    "        self.__epochs = epochs\n",
+    "        self.__predefined_weights = load_predefined_weights\n",
+    "        self.__tokenizer = tokenizer\n",
     "\n",
     "    def forward(self, input_ids, attention_mask):\n",
     "        outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
@@ -231,20 +190,95 @@
     "        logits = self.classifier(sequence_output)\n",
     "        return logits\n",
     "\n",
-    "def compute_class_weights(dataset, tag2id):\n",
-    "    tag_counts = Counter(tag for _, tags in dataset for tag in tags)\n",
-    "    total = sum(tag_counts.values())\n",
-    "    weights = [1.0 - (tag_counts[tag] / total) for tag in tag2id.keys()]\n",
-    "    print(weights)\n",
-    "    # weights[0] += 0.14\n",
-    "    weights[0] += 0.1\n",
-    "    print(weights)\n",
-    "    return torch.tensor(weights).to(device)"
+    "    def fit(self, dataset):\n",
+    "\n",
+    "        class SPOBioDataset(Dataset):\n",
+    "            def __init__(self, data, tokenizer, tag2id, max_len=512):\n",
+    "                self.data = data\n",
+    "                self.tokenizer = tokenizer\n",
+    "                self.tag2id = tag2id\n",
+    "                self.max_len = max_len\n",
+    "\n",
+    "            def __len__(self):\n",
+    "                return len(self.data)\n",
+    "\n",
+    "            def __getitem__(self, idx):\n",
+    "                tokens, tags = self.data[idx]\n",
+    "\n",
+    "                tokenized_input = self.tokenizer(tokens,\n",
+    "                                                is_split_into_words=True,\n",
+    "                                                padding='max_length',\n",
+    "                                                truncation=True,\n",
+    "                                                max_length=self.max_len,\n",
+    "                                                return_tensors=\"pt\")\n",
+    "\n",
+    "                word_ids = tokenized_input.word_ids(batch_index=0)\n",
+    "                label_ids = []\n",
+    "\n",
+    "                for word_idx in word_ids:\n",
+    "                    if word_idx is None:\n",
+    "                        label_ids.append(-100)\n",
+    "                    else:\n",
+    "                        label_ids.append(self.tag2id.get(tags[word_idx], self.tag2id['O']))\n",
+    "\n",
+    "                return {\n",
+    "                    'input_ids': tokenized_input['input_ids'].squeeze(),\n",
+    "                    'attention_mask': tokenized_input['attention_mask'].squeeze(),\n",
+    "                    'labels': torch.tensor(label_ids)\n",
+    "                }\n",
+    "            \n",
+    "        train_data, val_data = train_test_split(dataset, test_size=0.1, random_state=42)\n",
+    "\n",
+    "        train_dataset = SPOBioDataset(train_data, self.__tokenizer, self.__tag2id)\n",
+    "        val_dataset = SPOBioDataset(val_data, self.__tokenizer, self.__tag2id)\n",
+    "\n",
+    "        self.__train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
+    "        self.__val_loader = DataLoader(val_dataset, batch_size=8)\n",
+    "        \n",
+    "        if(self.__predefined_weights == None):\n",
+    "            weights = self.__compute_class_weights(train_data)\n",
+    "        else :\n",
+    "            weights = self.__predefined_weights\n",
+    "\n",
+    "        optimizer = optim.AdamW(self.parameters(), lr=self.__lr)\n",
+    "        loss_func = nn.CrossEntropyLoss(ignore_index=-100, weight=weights)\n",
+    "\n",
+    "        for epoch in range(self.__epochs):\n",
+    "            self.train()\n",
+    "            total_loss = 0\n",
+    "            \n",
+    "            for batch in self.__train_loader:\n",
+    "                input_ids = batch[\"input_ids\"].to(device)\n",
+    "                attention_mask = batch[\"attention_mask\"].to(device)\n",
+    "                labels = batch[\"labels\"].to(device)\n",
+    "\n",
+    "                optimizer.zero_grad()\n",
+    "                logits = self(input_ids, attention_mask)\n",
+    "\n",
+    "                loss = loss_func(logits.view(-1, len(self.__tag2id)), labels.view(-1))\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                total_loss += loss.item()\n",
+    "\n",
+    "            avg_loss = total_loss / len(self.__train_loader)\n",
+    "            print(f\"Epoch {epoch + 1} | Loss: {avg_loss:.4f}\")\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def __compute_class_weights(self, dataset):\n",
+    "        tag_counts = Counter(tag for _, tags in dataset for tag in tags)\n",
+    "        total = sum(tag_counts.values())\n",
+    "        weights = [1.0 - (tag_counts[tag] / total) for tag in self.__tag2id.keys()]\n",
+    "        print(weights)\n",
+    "        # weights[0] += 0.14\n",
+    "        weights[0] += 0.1\n",
+    "        print(weights)\n",
+    "        return torch.tensor(weights).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -252,61 +286,22 @@
      "output_type": "stream",
      "text": [
       "[0.020662489170075182, 0.9973756321653805, 0.9974108923858073, 0.9967812455924725, 0.9991688662327981, 0.9950937921863352, 0.9935070822671315]\n",
-      "[0.12066248917007519, 0.9973756321653805, 0.9974108923858073, 0.9967812455924725, 0.9991688662327981, 0.9950937921863352, 0.9935070822671315]\n"
+      "[0.12066248917007519, 0.9973756321653805, 0.9974108923858073, 0.9967812455924725, 0.9991688662327981, 0.9950937921863352, 0.9935070822671315]\n",
+      "Epoch 1 | Loss: 0.9123\n",
+      "Epoch 2 | Loss: 0.5776\n",
+      "Epoch 3 | Loss: 0.4547\n",
+      "Epoch 4 | Loss: 0.3319\n",
+      "Epoch 5 | Loss: 0.2308\n",
+      "Epoch 6 | Loss: 0.1576\n",
+      "Epoch 7 | Loss: 0.1188\n",
+      "Epoch 8 | Loss: 0.0898\n",
+      "Epoch 9 | Loss: 0.0736\n",
+      "Epoch 10 | Loss: 0.0652\n"
      ]
     }
    ],
    "source": [
-    "model = BERTTagger(tag2id).to(device)\n",
-    "optimizer = optim.AdamW(model.parameters(), lr=5e-5)\n",
-    "weights = compute_class_weights(train_data, tag2id)\n",
-    "loss_func = nn.CrossEntropyLoss(ignore_index=-100, weight=weights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 | Loss: 0.9002\n",
-      "Epoch 2 | Loss: 0.5746\n",
-      "Epoch 3 | Loss: 0.4213\n",
-      "Epoch 4 | Loss: 0.3052\n",
-      "Epoch 5 | Loss: 0.2129\n",
-      "Epoch 6 | Loss: 0.1574\n",
-      "Epoch 7 | Loss: 0.1156\n",
-      "Epoch 8 | Loss: 0.0843\n",
-      "Epoch 9 | Loss: 0.0741\n",
-      "Epoch 10 | Loss: 0.0615\n"
-     ]
-    }
-   ],
-   "source": [
-    "EPOCHS = 10\n",
-    "\n",
-    "for epoch in range(EPOCHS):\n",
-    "    model.train()\n",
-    "    total_loss = 0\n",
-    "    \n",
-    "    for batch in train_loader:\n",
-    "        input_ids = batch[\"input_ids\"].to(device)\n",
-    "        attention_mask = batch[\"attention_mask\"].to(device)\n",
-    "        labels = batch[\"labels\"].to(device)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        logits = model(input_ids, attention_mask)\n",
-    "\n",
-    "        loss = loss_func(logits.view(-1, len(tag2id)), labels.view(-1))\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        total_loss += loss.item()\n",
-    "\n",
-    "    avg_loss = total_loss / len(train_loader)\n",
-    "    print(f\"Epoch {epoch + 1} | Loss: {avg_loss:.4f}\")\n"
+    "model = BERT_SPO_Tagger(tag2id, tokenizer).to(device).fit(dataset)"
    ]
   },
   {
@@ -318,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -423,26 +418,22 @@
      "output_type": "stream",
      "text": [
       "Predicted Triplets:\n",
-      "('PharmNovo', 'is', 'Karolinska Development AB')\n",
-      "('Viktor Drvota', 'said', 'FDA')\n",
-      "('PharmNovo', 'received', 'Phase')\n",
-      "('PharmNovo', 'announces', 'FDA')\n",
-      "('PharmNovo', 'announces', 'feedback')\n",
-      "('PharmNovo', 'is', 'Phase')\n",
-      "('PharmNovo', 'said', 'FDA')\n",
-      "('PharmNovo', 'announces', 'Karolinska Development AB')\n",
-      "('Viktor Drvota', 'said', 'Phase')\n",
-      "('PharmNovo', 'conducted', 'FDA')\n",
       "('PharmNovo', 'plans to apply', 'FDA')\n",
-      "('Viktor Drvota', 'said', 'CEO')\n",
-      "('PharmNovo', 'plans to apply', 'feedback')\n",
-      "('PharmNovo', 'received', 'FDA')\n",
-      "('PharmNovo', 'said', 'Phase')\n",
-      "('PharmNovo', 'received', 'feedback')\n",
-      "('PharmNovo', 'said', 'CEO')\n",
-      "('PharmNovo', 'received', 'Karolinska Development AB')\n",
       "('PharmNovo', 'is', 'FDA')\n",
-      "('PharmNovo', 'is', 'feedback')\n"
+      "('Viktor Drvota', 'said', 'FDA')\n",
+      "('Viktor Drvota', 'said', 'CEO')\n",
+      "('PharmNovo', 'conducted', 'FDA')\n",
+      "('PharmNovo', 'is', 'Karolinska Development AB')\n",
+      "('PharmNovo', 'said', 'FDA')\n",
+      "('PharmNovo', 'said', 'CEO')\n",
+      "('Viktor Drvota', 'said', 'Phase 2a')\n",
+      "('PharmNovo', 'received', 'FDA')\n",
+      "('PharmNovo', 'is', 'Phase 2a')\n",
+      "('Viktor Drvota', 'contact', 'Karolinska Development AB')\n",
+      "('Viktor Drvota', 'contact', 'CEO')\n",
+      "('PharmNovo', 'said', 'Phase 2a')\n",
+      "('PharmNovo', 'received', 'Karolinska Development AB')\n",
+      "('PharmNovo', 'received', 'Phase 2a')\n"
      ]
     }
    ],
@@ -474,11 +465,18 @@
     "for t in triplets:\n",
     "    print(t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "p3.11",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
