--- a/models/Viterbi/viterbi.ipynb
+++ b/models/Viterbi/viterbi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "bb8fff47",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "dd0e44d4",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b1990887",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "88a72445",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "485f66e4",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "6481b61d",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "042dea1a",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "943cf541",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "342d681f",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "8fac357b",
    "metadata": {},
    "outputs": [],
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "ef8b73ab",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "0f7d21b7",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "b0b24bf4",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,9 @@
       "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/nltk/tag/hmm.py:335: RuntimeWarning: overflow encountered in cast\n",
       "  O[i, k] = self._output_logprob(si, self._symbols[k])\n",
       "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/nltk/tag/hmm.py:331: RuntimeWarning: overflow encountered in cast\n",
-      "  P[i] = self._priors.logprob(si)\n"
+      "  P[i] = self._priors.logprob(si)\n",
+      "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/nltk/tag/hmm.py:363: RuntimeWarning: overflow encountered in cast\n",
+      "  O[i, k] = self._output_logprob(si, self._symbols[k])\n"
      ]
     },
     {
@@ -477,8 +479,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/nltk/tag/hmm.py:363: RuntimeWarning: overflow encountered in cast\n",
-      "  O[i, k] = self._output_logprob(si, self._symbols[k])\n",
       "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
@@ -488,36 +488,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Overall Accuracy: 15.28%\n",
+      "Overall Accuracy: 18.89%\n",
       "\n",
       "Sequence-level Metrics:\n",
       "Exact Match: 0.00%\n",
-      "Partial Match: 8.00%\n",
+      "Partial Match: 10.00%\n",
       "\n",
-      "BLEU Score: 0.0766\n",
+      "BLEU Score: 0.1137\n",
       "\n",
       "ROUGE Scores:\n",
-      "ROUGE-1: {'r': 0.4161904761904761, 'p': 0.995, 'f': 0.5425238058125262}\n",
-      "ROUGE-2: {'r': 0.18601448551448546, 'p': 0.7396190476190475, 'f': 0.24818949363166823}\n",
-      "ROUGE-L: {'r': 0.3811904761904762, 'p': 0.9516666666666665, 'f': 0.5044285677172883}\n",
+      "ROUGE-1: {'r': 0.43652380952380954, 'p': 0.99, 'f': 0.5508571391478871}\n",
+      "ROUGE-2: {'r': 0.22729136060018423, 'p': 0.7782222222222223, 'f': 0.27840664995730136}\n",
+      "ROUGE-L: {'r': 0.40319047619047615, 'p': 0.9566666666666667, 'f': 0.5179999962907443}\n",
       "\n",
       "Per-tag metrics:\n",
       "Tag             Count      Precision  Recall     F1        \n",
       "-------------------------------------------------------\n",
-      "O               5651       73.81%     1.10%      2.16%     \n",
-      "OBJ             1219       18.18%     0.16%      0.33%     \n",
-      "ORG             11         0.00%      0.00%      0.00%     \n",
-      "PERSON          18         0.00%      0.00%      0.00%     \n",
-      "PLACE           7          0.00%      0.00%      0.00%     \n",
-      "PRED            967        93.75%     1.55%      3.05%     \n",
-      "SUBJ            1349       14.60%     98.59%     25.43%    \n",
+      "O               2922       74.16%     2.26%      4.38%     \n",
+      "OBJ             805        44.44%     0.99%      1.94%     \n",
+      "ORG             36         0.00%      0.00%      0.00%     \n",
+      "PERSON          1          0.00%      0.00%      0.00%     \n",
+      "PLACE           4          0.00%      0.00%      0.00%     \n",
+      "PRED            740        89.66%     3.51%      6.76%     \n",
+      "SUBJ            940        17.49%     98.83%     29.72%    \n",
       "\n",
       "Top Error Patterns:\n",
-      "O -> SUBJ: 5585\n",
-      "OBJ -> SUBJ: 1211\n",
-      "PRED -> SUBJ: 949\n",
-      "PERSON -> SUBJ: 18\n",
-      "SUBJ -> O: 13\n"
+      "O -> SUBJ: 2851\n",
+      "OBJ -> SUBJ: 781\n",
+      "PRED -> SUBJ: 710\n",
+      "ORG -> SUBJ: 36\n",
+      "OBJ -> O: 16\n"
      ]
     }
    ],
